<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_auctions_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="presentation.auctions.AuctionsFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_auctions"
        android:src="@drawable/ic_arrow_up"
        android:layout_marginBottom="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/label_auctions_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="-2dp"
        android:gravity="center"
        android:text="@string/setup_filters" />

    <HorizontalScrollView
        android:layout_marginTop="8dp"
        android:id="@+id/auction_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/btn_realm_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_filter_selector"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:text="@string/realm"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                app:layout_constraintLeft_toRightOf="@id/btn_realm_filter"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/btn_version_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@drawable/btn_filter_selector"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:text="@string/version"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                app:layout_constraintLeft_toRightOf="@id/btn_version_filter"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/btn_faction_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@drawable/btn_filter_selector"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:text="@string/faction"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                app:layout_constraintLeft_toRightOf="@id/btn_faction_filter"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/btn_keyword_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@drawable/btn_filter_selector"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:text="@string/keyword"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                app:layout_constraintLeft_toRightOf="@id/btn_keyword_filter"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/btn_category_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@drawable/btn_filter_selector"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:text="@string/category"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/btn_search_auctions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_primary_color_rounded_edges"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auction_filters"
        tools:visibility="visible" />

    <pt.mferreira.classicauctions.presentation.auctions.filters.version.VersionFilter
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/version_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btn_search_auctions"
        tools:visibility="visible" />

    <pt.mferreira.classicauctions.presentation.auctions.filters.realm.RealmFilter
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/realm_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_search_auctions"
        tools:visibility="visible" />

    <pt.mferreira.classicauctions.presentation.auctions.filters.faction.FactionFilter
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/faction_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btn_search_auctions"
        tools:visibility="visible" />

    <pt.mferreira.classicauctions.presentation.auctions.filters.item.KeywordFilter
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/keyword_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btn_search_auctions"
        tools:visibility="visible" />

    <pt.mferreira.classicauctions.presentation.auctions.filters.category.CategoryFilter
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/category_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_search_auctions"
        tools:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:elevation="-1dp"
        android:id="@+id/list_auctions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_search_auctions" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/auctions_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/black"
        android:elevation="2dp"
        android:visibility="gone"
        tools:visibility="visible">

        <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:visibility="gone"
            android:id="@+id/lbl_loading_from_cache"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fetching_auctions_from_cache"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loading_progress" />

        <TextView
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            tools:visibility="visible"
            android:visibility="gone"
            android:id="@+id/lbl_loading_from_server"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fetching_auctions_from_server"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loading_progress" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>