<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_white_rounded_edges"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_faction_filter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="8dp"
                android:text="@string/faction"
                android:textColor="?android:colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/btn_faction_filter_close"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btn_faction_filter_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:src="@drawable/ic_close"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/btn_faction_filter_alliance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="18dp"
                android:scaleX="0.9"
                android:scaleY="0.9"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_faction_filter" />

            <TextView
                android:id="@+id/label_faction_filter_alliance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="24dp"
                android:text="@string/alliance"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/btn_faction_filter_alliance"
                app:layout_constraintLeft_toRightOf="@id/btn_faction_filter_alliance"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_faction_filter" />

            <RadioButton
                android:id="@+id/btn_faction_filter_horde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:scaleX="0.9"
                android:scaleY="0.9"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_faction_filter_alliance" />

            <TextView
                android:id="@+id/label_faction_filter_horde"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="24dp"
                android:text="@string/horde"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/btn_faction_filter_horde"
                app:layout_constraintLeft_toRightOf="@id/btn_faction_filter_horde"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_faction_filter_alliance" />

            <RadioButton
                android:id="@+id/btn_faction_filter_neutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:scaleX="0.9"
                android:scaleY="0.9"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_faction_filter_horde" />

            <TextView
                android:id="@+id/label_faction_filter_neutral"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="24dp"
                android:text="@string/neutral"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/btn_faction_filter_neutral"
                app:layout_constraintLeft_toRightOf="@id/btn_faction_filter_neutral"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_faction_filter_horde" />

            <TextView
                android:id="@+id/btn_faction_filter_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:text="@string/apply"
                android:textColor="?android:colorPrimary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_faction_filter_neutral" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>