<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_pvp_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:id="@+id/pvp_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/btn_realm_region_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_filter_selector"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:text="@string/realm_region"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_pvp_region_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@drawable/btn_filter_selector"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:text="@string/pvp_region"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/btn_realm_region_filter"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_season_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@drawable/btn_filter_selector"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:text="@string/season"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/btn_pvp_region_filter"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/btn_update_leaderboards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_primary_color_rounded_edges"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        android:paddingVertical="6dp"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/pvp_filters"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:visibility="visible" />

    <pt.mferreira.classicauctions.presentation.pvp.filters.realm_region.RealmRegionFilter
        android:id="@+id/realm_region_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_update_leaderboards"
        tools:visibility="visible" />

    <pt.mferreira.classicauctions.presentation.pvp.filters.pvp_region.PvPRegionFilter
        android:id="@+id/pvp_region_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_update_leaderboards"
        tools:visibility="visible" />

    <pt.mferreira.classicauctions.presentation.pvp.filters.season.SeasonFilter
        android:id="@+id/season_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_update_leaderboards"
        tools:visibility="visible" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pvp_bracket_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_update_leaderboards" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pvp_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/black"
        android:elevation="2dp"
        android:visibility="gone"
        tools:visibility="visible">

        <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lbl_loading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:gravity="center"
            android:text="@string/loading"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loading_progress" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>